# App-Template-Selector

./: .gitignore  Readme.md
Templates/C++/Basic C++ application/: main.cpp
Templates/C/Basic C application/: main.c
Templates/Python 3/Basic MVC Application with TKinter/: Controller.py  Model.py  View.py  main.py
Templates/Python 3/Basic Python Application/: main.py
source/: CMakeLists.txt  Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui
source/include/Controllers/: TemplateSelectorController.h  WindowOrganiser.h
source/include/Models/: IJsonReaderWriter.h  ProgLangScanner.h  ReaderWriterFactory.h  TemplateScanner.h  TemplateSelectorModel.h
source/include/Utils/: errormacros.h  globals.h  macros.h  pathvalidator.h
source/include/Views/: LangSelectWindow.h  TemplateSelectorView.h
source/src/: main.cpp
source/src/Controllers/: TemplateSelectorController.cpp  WindowOrganiser.cpp
source/src/Models/: ProgLangScanner.cpp  ReaderWriterFactory.cpp  TemplateScanner.cpp  TemplateSelectorModel.cpp
source/src/Utils/: globals.cpp  pathvalidator.cpp
source/src/Views/: LangSelectWindow.cpp  TemplateSelectorView.cpp
source/test/: tst_directoryexiststest.cpp  tst_directoryexiststest.h
